# organisations-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  api.rest  bors.toml  db.sh  db.sql  docker-compose.yml
organisations/: Cargo.toml
server/: Cargo.toml
server/src/: main.rs
src/: context.rs  events.rs  eventstore.rs  jwt.rs  main.rs  middleware.rs  operations.rs  responses.rs
src/aggregators/: get_invite.rs  members_by_organisation_id.rs  mod.rs
src/enforcement/: admin_only.rs  mod.rs  organisation_member.rs
src/extractors/: jwt.rs
src/operations/: get_organisation_members.rs  mod.rs  update_membership.rs
