[package]
name = "organisations"
version = "0.1.0"
authors = ["James Waples <jamwaffles@gmail.com>", "Peter East <08peast@gmail.com>"]

[badges]
travis-ci = { repository = "jamwaffles/organisations-rs", branch = "master" }

[dependencies]
actix-web = { version = "0.7.2", default_features = false }
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"
postgres = { version = "0.15.2", features = [ "with-serde_json" ] }
uuid = { version = "0.6.5", features = [ "v4" ,"serde" ] }
r2d2 = "0.8.2"
r2d2_postgres = "0.14.0"
futures = "0.1.23"
jsonwebtoken = "4.0.1"
